# elascope

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build_container.sh  pico-osc.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
src/: core1_main.cpp  core1_main.hpp  main.cpp  posc_version.h.in  terminal_variables.cpp  terminal_variables.hpp
src/posc/: posc_adc.hpp  posc_comms.hpp  posc_dataplotter_stream.hpp  posc_dataplotter_terminal.hpp  posc_dma.hpp  posc_dterminal_dynamic.hpp  posc_precise_freq.hpp  posc_pwm.hpp  posc_trigger.hpp
